# LorentzForceSimulator

./: CMakeLists.txt  LICENSE  README.md  README.tex
common/: text2D.cpp  text2D.hpp
src/: arrow.cpp  arrow.hpp  camera_setup.hpp  main.cpp  setup_openGL.cpp  setup_openGL.hpp  sphere.hpp
src/flux_calculation_kernel_CUDA/: flux_kernel.cu  flux_kernel.cuh
src/shaders/: ArrowFragmentShader.glsl  ArrowVertexShader.glsl  TransformVertexShader.glsl
textures_n_objects/: copper.dds  sphere.dds  wood.dds
